@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.26 2002/08/27 19:19:45 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.27 2002/10/02 16:39:39 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -3010,8 +3010,7 @@ get_jobs(client_t        *con,		/* I - Client connection */
     dmask = CUPS_PRINTER_CLASS;
 
  /*
-  * See if the "which-jobs" attribute have been specified; if so, return
-  * right away if they specify "completed" - we don't keep old job records...
+  * See if the "which-jobs" attribute have been specified...
   */
 
   if ((attr = ippFindAttribute(con->request, "which-jobs", IPP_TAG_KEYWORD)) != NULL &&
@@ -6027,5 +6026,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.26 2002/08/27 19:19:45 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.27 2002/10/02 16:39:39 mike Exp $".
  */
